<!--
  ~  Copyright (C) 2023 Rajesh Hadiya
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<resources>
    <string name="app_name">FlowerSample</string>
    <string name="profile">Profile</string>
    <string name="db_profile_message">This data is fetched from local database</string>
    <string name="load_from_network">Load from network</string>
    <string name="author">Author</string>
    <string name="url">URL</string>
    <string name="author_name">Author name</string>
    <string name="profile_url">Profile URL</string>
    <string name="no_details_found">No details found for this user.</string>
    <string name="swipe_down_to_refresh">Swipe down to refresh</string>
    <string name="loading_error_msg">Error has occured, Please try after sometime</string>
    <string name="details">Details</string>
</resources>