<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profileDetailScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".fragment.detail.ProfileDetailFragment"
            android:visibility="visible">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_margin="8dp"
                app:cardElevation="@dimen/card_elevation"
                app:cardPreventCornerOverlap="false">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="profile"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/authorLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/author"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/authorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/author_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/url"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:linksClickable="true"
                    android:text="@string/profile_url"
                    android:tag="Profile URL"
                    android:clickable="true"
                    android:textColor="@color/purple_700"
                    android:textColorLink="@color/purple_700"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imageDestInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dataLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/db_profile_message"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/loadfromNetwork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:linksClickable="true"
                    android:text="@string/load_from_network"
                    android:textColor="@color/white"
                    android:textColorLink="@color/purple_700"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noInfoMsg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/tvErrMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/no_details_found"
                android:gravity="center_horizontal"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</layout>